[gd_scene load_steps=27 format=4 uid="uid://dc5prgojrqgm7"]

[ext_resource type="Script" path="res://Level/level(1)(1).gd" id="1_dq46g"]
[ext_resource type="Texture2D" uid="uid://detaky58bljgd" path="res://assets/backgroundsheet (2).png" id="2_e3ynh"]
[ext_resource type="Texture2D" uid="uid://jgbcayyhrs4e" path="res://assets/bgsheet.png" id="3_e10gd"]
[ext_resource type="PackedScene" uid="uid://b70hv4v75lr1p" path="res://player/player.tscn" id="4_oatnb"]
[ext_resource type="PackedScene" uid="uid://c8lvpjoslcppl" path="res://Enemy/Enemy.tscn" id="5_h4wiv"]

[sub_resource type="TileMapPattern" id="TileMapPattern_36p3d"]
tile_data = PackedInt32Array(0, 0, 2, 65536, 0, 3)

[sub_resource type="TileMapPattern" id="TileMapPattern_tgbdo"]
tile_data = PackedInt32Array(0, 3, 0, 65536, 3, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_worv2"]
tile_data = PackedInt32Array(0, 3, 2, 65536, 196611, 0)

[sub_resource type="TileMapPattern" id="TileMapPattern_wfdgi"]
tile_data = PackedInt32Array(0, 3, 2, 65536, 196611, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_ckjs3"]
tile_data = PackedInt32Array(0, 131075, 2, 1, 131075, 3, 2, 65539, 2)

[sub_resource type="TileMapPattern" id="TileMapPattern_ry8us"]
tile_data = PackedInt32Array(0, 3, 0, 65536, 65539, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_nwsq2"]
tile_data = PackedInt32Array(0, 3, 0, 65536, 131075, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_637tv"]
tile_data = PackedInt32Array(0, 65539, 0, 65536, 3, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_6ixth"]
tile_data = PackedInt32Array(0, 65539, 0, 65536, 65539, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_tep2y"]
tile_data = PackedInt32Array(0, 65539, 0, 65536, 131075, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_ig3iw"]
tile_data = PackedInt32Array(0, 131075, 0, 65536, 3, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_s7evc"]
tile_data = PackedInt32Array(0, 131075, 0, 65536, 65539, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_ys0ig"]
tile_data = PackedInt32Array(0, 131075, 0, 65536, 131075, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_03e40"]
texture = ExtResource("2_e3ynh")
texture_region_size = Vector2i(50, 50)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
0:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8di8k"]
texture = ExtResource("3_e10gd")
texture_region_size = Vector2i(50, 50)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(25, -8.33333, 25, -11.6667, -25, -11.6667, -25, -8.33333)
0:1/0 = 0
0:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(25, -8.33333, 25, -11.6667, -25, -11.6667, -25, -8.33333)
1:1/0 = 0
1:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(25, -8.33333, 25, -11.6667, -25, -11.6667, -25, -8.33333)
2:1/0 = 0
2:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(25, -8.33333, 25, -11.6667, -25, -11.6667, -25, -8.33333)
3:1/0 = 0
3:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(25, -8.33333, 25, -11.6667, -25, -11.6667, -25, -8.33333)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
0:5/0 = 0

[sub_resource type="TileSet" id="TileSet_8566c"]
tile_size = Vector2i(50, 50)
physics_layer_0/collision_layer = 16
physics_layer_0/collision_mask = 16
physics_layer_1/collision_layer = 16
physics_layer_1/collision_mask = 16
sources/1 = SubResource("TileSetAtlasSource_03e40")
sources/3 = SubResource("TileSetAtlasSource_8di8k")
pattern_0 = SubResource("TileMapPattern_36p3d")
pattern_1 = SubResource("TileMapPattern_tgbdo")
pattern_2 = SubResource("TileMapPattern_ry8us")
pattern_3 = SubResource("TileMapPattern_nwsq2")
pattern_4 = SubResource("TileMapPattern_637tv")
pattern_5 = SubResource("TileMapPattern_6ixth")
pattern_6 = SubResource("TileMapPattern_tep2y")
pattern_7 = SubResource("TileMapPattern_ig3iw")
pattern_8 = SubResource("TileMapPattern_s7evc")
pattern_9 = SubResource("TileMapPattern_ys0ig")
pattern_10 = SubResource("TileMapPattern_worv2")
pattern_11 = SubResource("TileMapPattern_wfdgi")
pattern_12 = SubResource("TileMapPattern_ckjs3")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hh6y6"]
size = Vector2(34.375, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5xjx1"]
size = Vector2(36, 280)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kw8xw"]
size = Vector2(1384, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xo655"]
size = Vector2(35, 340)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1j1sd"]
size = Vector2(1389, 20)

[node name="Level" type="Node2D"]
script = ExtResource("1_dq46g")

[node name="TileMap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAMAAQAAwADAAIAAAANAAQAAwACAAIAAAAPAAQAAwABAAIAAAAQAAQAAwACAAIAAAAOAAQAAwACAAMAAAAMAAUAAQAAAAUAAAANAAUAAQAAAAUAAAAPAAUAAQAAAAUAAAALAAQAAwAAAAUAAAALAAUAAQAAAAUAAAAKAAQAAwAAAAQAAAAKAAUAAQAAAAUAAAALAAYAAQAAAAUAAAAIAAQAAwAAAAUAAAAJAAQAAwAAAAQAAAAJAAUAAQAAAAUAAAAKAAYAAQAAAAUAAAAJAAYAAQAAAAUAAAAMAAYAAQAAAAUAAAANAAYAAQAAAAUAAAAOAAYAAQAAAAUAAAAPAAYAAQAAAAUAAAAQAAYAAQAAAAUAAAAHAAQAAwADAAMAAAAHAAUAAQAAAAUAAAAHAAYAAQAAAAUAAAAIAAYAAQAAAAUAAAAIAAUAAQAAAAUAAAAGAAQAAwADAAMAAAAGAAUAAQAAAAUAAAAGAAYAAQAAAAUAAAAGAAcAAQAAAAUAAAAHAAcAAQAAAAUAAAAIAAcAAQAAAAUAAAAJAAcAAQAAAAUAAAAKAAcAAQAAAAUAAAALAAcAAQAAAAUAAAAMAAcAAQAAAAUAAAANAAcAAQAAAAUAAAAOAAcAAQAAAAUAAAAPAAcAAQAAAAUAAAAQAAcAAQAAAAUAAAAEAAQAAwADAAMAAAAEAAUAAQAAAAUAAAAFAAUAAQAAAAUAAAAFAAYAAQAAAAUAAAAFAAcAAQAAAAUAAAAEAAcAAQAAAAUAAAAEAAYAAQAAAAUAAAAFAAQAAwADAAIAAAARAAQAAwACAAMAAAAUAAQAAwADAAIAAAATAAQAAwADAAMAAAASAAQAAwABAAIAAAAVAAQAAwADAAMAAAAWAAQAAwADAAMAAAAXAAQAAwADAAMAAAAYAAQAAwAAAAQAAAAZAAQAAwADAAMAAAAaAAQAAwAAAAUAAAAOAAUAAQAAAAUAAAAQAAUAAQAAAAUAAAARAAYAAQAAAAUAAAASAAYAAQAAAAUAAAATAAYAAQAAAAUAAAAUAAYAAQAAAAUAAAAVAAYAAQAAAAUAAAAWAAYAAQAAAAUAAAAXAAYAAQAAAAUAAAAYAAYAAQAAAAUAAAAZAAYAAQAAAAUAAAAaAAYAAQAAAAUAAAAaAAUAAQAAAAUAAAAZAAUAAQAAAAUAAAAYAAUAAQAAAAUAAAAXAAUAAQAAAAUAAAAWAAUAAQAAAAUAAAAVAAUAAQAAAAUAAAAUAAUAAQAAAAUAAAATAAUAAQAAAAUAAAASAAUAAQAAAAUAAAARAAUAAQAAAAUAAAARAAcAAQAAAAUAAAASAAcAAQAAAAUAAAATAAcAAQAAAAUAAAAUAAcAAQAAAAUAAAAVAAcAAQAAAAUAAAAWAAcAAQAAAAUAAAAXAAcAAQAAAAUAAAAYAAcAAQAAAAUAAAAZAAcAAQAAAAUAAAAaAAcAAQAAAAUAAAAbAAcAAQAAAAUAAAAcAAcAAQAAAAUAAAAdAAcAAQAAAAUAAAAdAAYAAQAAAAUAAAAdAAUAAQAAAAUAAAAdAAQAAwAAAAQAAAAcAAQAAwADAAMAAAAbAAQAAwADAAIAAAAbAAUAAQAAAAUAAAAbAAYAAQAAAAUAAAAcAAYAAQAAAAUAAAAcAAUAAQAAAAUAAAAeAAQAAQAAAAQAAAAeAAUAAQAAAAUAAAAeAAYAAQAAAAUAAAAeAAcAAQAAAAUAAAAKAAMAAwACAAEAAAAKAAIAAwABAAAAAAALAAIAAwACAAAAAAALAAMAAwAAAAEAAAAMAAIAAwACAAAAAAAMAAMAAwABAAEAAAANAAIAAwACAAAAAAANAAMAAwACAAEAAAAOAAIAAwAAAAIAAAAOAAMAAwADAAAAAAAPAAIAAwABAAAAAAAPAAMAAwACAAEAAAAQAAIAAwAAAAAAAAAQAAMAAwAAAAEAAAARAAIAAwAAAAIAAAARAAMAAwADAAEAAAASAAIAAwABAAAAAAASAAMAAwAAAAEAAAATAAIAAwACAAAAAAATAAMAAwAAAAEAAAAUAAIAAwAAAAAAAAAUAAMAAwABAAEAAAAVAAIAAwACAAAAAAAVAAMAAwACAAEAAAAWAAIAAwAAAAIAAAAWAAMAAwADAAEAAAAXAAIAAwABAAAAAAAXAAMAAwACAAEAAAAJAAIAAwABAAAAAAAJAAMAAwABAAEAAAAIAAIAAwABAAAAAAAIAAMAAwAAAAEAAAAHAAIAAwAAAAAAAAAHAAMAAwACAAEAAAAGAAIAAwAAAAAAAAAGAAMAAwABAAEAAAAFAAIAAwAAAAAAAAAFAAMAAwAAAAEAAAAEAAIAAwAAAAIAAAAEAAMAAwADAAEAAAAYAAIAAwAAAAAAAAAYAAMAAwAAAAEAAAAZAAIAAwACAAAAAAAZAAMAAwACAAEAAAAaAAIAAwABAAAAAAAaAAMAAwACAAEAAAAbAAIAAwAAAAAAAAAbAAMAAwAAAAEAAAAcAAIAAwABAAAAAAAcAAMAAwABAAEAAAAdAAIAAwABAAAAAAAdAAMAAwAAAAEAAAAeAAIAAwABAAAAAAAeAAMAAwABAAEAAAA=")
tile_set = SubResource("TileSet_8566c")

[node name="player" parent="." instance=ExtResource("4_oatnb")]
position = Vector2(233, 226)
collision_layer = 19
collision_mask = 19

[node name="enemy" parent="." instance=ExtResource("5_h4wiv")]
position = Vector2(1397, 223)

[node name="projectiles" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(725, 174)
shape = SubResource("RectangleShape2D_hh6y6")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(1569, 241)
shape = SubResource("RectangleShape2D_5xjx1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(893, 400)
shape = SubResource("RectangleShape2D_kw8xw")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(183, 247)
shape = SubResource("RectangleShape2D_xo655")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(893.5, 88)
shape = SubResource("RectangleShape2D_1j1sd")

[connection signal="laser" from="player" to="." method="_on_player_laser"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
